<resources>
    <string name="app_name">SP Office</string>
    <!--<string name="url" translatable="false">http://192.168.1.109:963/</string>-->
    <!--<string name="url" translatable="false">http://jdadmin-001-site3.itempurl.com/</string>-->
    <string name="url" translatable="false">http://jdadmin-001-site9.itempurl.com/</string>
    <string name="rupees">₹ %1$s</string>
    <string name="failed_try_again">Failed attempt. Please try again</string>
    <string name="failed_server">Failed to get data from server.</string>
    <string name="welcome">Welcome %1$s</string>
    <string name="no_items">No items</string>
    <string name="give_valid">Give valid information</string>
    <string name="enquiries">Enquiries</string>
    <string name="proforma_invoices">Proforma Invoices</string>
    <string name="quotations">Quotations</string>
    <string name="days90">Last 90 days</string>
    <string name="days180">Last 180 days</string>
    <string name="days365">Last 365 days</string>
    <string name="title_activity_enquiries">Enquiries</string>
    <string name="select_date">Select date</string>
    <string name="add_followup_q">Do you want to add a followup to this enquiry? [Enquiry No: %1$s]</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enquiry">Enquiry</string>
    <string name="follow_up">FollowUp</string>
    <string name="status">Status</string>
    <string name="select_time">Select time</string>
    <string name="title_activity_follow_up">FollowUp</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="client_name">Client Name</string>
    <string name="contact_name">Contact Name</string>
    <string name="notes">Notes</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="converted">Converted</string>
    <string name="not_converted">Not Converted</string>

    <string name="description">Description</string>
    <string name="follow_up_of">Follow Up of</string>
    <string name="email_sent_colon">Email sent: %1$s</string>
    <string name="customer_orders">Customer Orders</string>
    <string name="supplier_orders">Supplier Orders</string>
    <string name="title_activity_quotations_list">Quotations</string>
    <string name="status_colon">Status: %1$s</string>
    <string name="title_activity_proforma_list">ProformaList</string>
    <string name="title_activity_customer_orders_list">CustomerOrdersList</string>
    <string name="title_activity_supplier_orders_list">SupplierOrdersList</string>
    <string name="close_all_followups">Close all followups to insert new one</string>
    <string name="requisitions">Requisitions</string>
    <string name="pending_requisitions">Pending Requisitions</string>
    <string name="approved_requisitions">Approved Requisitions</string>
    <string name="closed_requisitions">Closed Requisitions</string>
    <string name="approved">Approved</string>
    <string name="pending">Pending</string>
    <string name="approve_q">Are you sure to approve this requisition?</string>
    <string name="cancel">Cancel</string>
    <string name="current_quantity">Current Quantity: %1$s</string>
    <string name="requested_quantity">Requested Quantity: %1$s</string>
    <string name="approx_rate">Approx. Rate</string>
    <string name="total_label">Total: ₹ %1$s</string>
    <string name="requisition_no_label">Requisition No:</string>
    <string name="date_label">Date:</string>
    <string name="company_name_label">Company Name:</string>
    <string name="requisition_status_label">Requisition Status:</string>
    <string name="title_label">Title:</string>
    <string name="autogenerated">Autogenerated</string>
    <string name="select_item_label">Select Item:</string>
    <string name="extended_description_label">Extended Description:</string>
    <string name="description_label">Description:</string>
    <string name="current_quantity_label">Current Quantity:</string>
    <string name="requested_quantity_label">Requested Quantity:</string>
    <string name="req_inserted">Requisition added : %1$s</string>
    <string name="req_updated">Requisition updated : %1$s</string>
    <string name="amount_label">Amount:</string>
    <string name="ok">OK</string>
    <string name="please_wait">Please wait...</string>
    <string name="lead_owner">Lead Owner</string>
    <string name="delete_q">Delete this?</string>
    <string name="lead_owner_label_value">Lead Owner: %1$s</string>
</resources>
