<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tech.thrithvam.spoffice.InsertRequisition"
    android:background="@drawable/primary_gradient">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="0dp"
        app:cardUseCompatPadding="true"
        android:animateLayoutChanges="true"
        android:id="@+id/header_card"
        android:layout_marginTop="5dp">
        <RelativeLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:padding="7dp">

            <TextView
                android:id="@+id/requisition_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/requisition_no_label"
                android:textColor="@color/primary_text"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/title_label"
                android:textColor="@color/primary_text"
                android:layout_below="@id/requisition_no"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/date_label"
                android:id="@+id/date"
                android:padding="1dp"
                android:textColor="@color/primary_text"
                android:layout_below="@id/title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/company_name_label"
                android:id="@+id/company_name"
                android:padding="1dp"
                android:textColor="@color/primary_text"
                android:layout_below="@id/date"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/requisition_status_label"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                android:padding="1dp"
                android:id="@+id/status"
                android:layout_below="@+id/company_name"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
