<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tech.thrithvam.spoffice.EnquiryInput"
    android:background="@drawable/primary_gradient">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:animateLayoutChanges="true"
        android:id="@+id/input_card">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:id="@+id/date"
                android:onClick="getDates"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/contact_title"
                    android:textColor="@color/primary_text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:hint="@string/contact_name"
                    android:textColor="@color/primary_text"
                    android:id="@+id/contact_name"
                    android:inputType="textPersonName"
                    android:maxLength="100"/>
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/client_name"
                android:textColor="@color/primary_text"
                android:id="@+id/client_name"
                android:maxLength="150"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/mobile"
                android:textColor="@color/primary_text"
                android:id="@+id/mobile"
                android:inputType="phone"
                android:maxLength="50"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/email"
                android:textColor="@color/primary_text"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:maxLength="150"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/notes"
                android:textColor="@color/primary_text"
                android:id="@+id/notes"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:maxLength="5000"/>
        </LinearLayout>
        </android.support.v7.widget.CardView>
    <com.dd.CircularProgressButton
        android:id="@+id/save_button"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_below="@+id/input_card"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:cpb_selectorIdle="@drawable/button_colors"
        app:cpb_colorIndicator="@color/colorPrimary"
        app:cpb_colorProgress="@android:color/transparent"
        app:cpb_colorIndicatorBackground="@color/cpb_grey"
        app:cpb_textComplete="Saved"
        app:cpb_textError="Error Occurred"
        app:cpb_textIdle="Save"
        android:padding="5dp"
        app:cpb_cornerRadius="4dp"
        app:cpb_paddingProgress="5dp"/>
            </RelativeLayout>
    </ScrollView>
</RelativeLayout>
