<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="0dp"
        app:cardUseCompatPadding="true"
        android:animateLayoutChanges="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="7dp"
            android:animateLayoutChanges="true">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/close"
                android:tint="@color/secondary_text"
                android:layout_gravity="right"
                android:id="@+id/close"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/select_item_label"
                android:id="@+id/name"
                android:padding="1dp"
                android:textColor="@color/primary_text"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/material_code_value"/>
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                android:textSize="14sp"
                android:textColor="@color/primary_text" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/primary_text"
                    android:id="@+id/description" />
                </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/extended_description_label"
                android:textSize="14sp"
                android:textColor="@color/primary_text" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
                android:textSize="14sp"
                android:textColor="@color/primary_text"
                android:id="@+id/ext_des" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/current_quantity_label"
                    android:textSize="14sp"
                    android:textColor="@color/primary_text" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text=""
                    android:textSize="14sp"
                    android:textColor="@color/primary_text"
                    android:id="@+id/curr_qty"
                    android:inputType="numberDecimal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/requested_quantity_label"
                    android:textSize="14sp"
                    android:textColor="@color/primary_text" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text=""
                    android:textSize="14sp"
                    android:textColor="@color/primary_text"
                    android:id="@+id/req_qty"
                    android:inputType="numberDecimal"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/amount_label"
                android:textSize="16sp"
                android:textColor="@color/primary_text"/>
           <!-- <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="13sp"
                android:textColor="@color/secondary_text"
                android:id="@+id/amount_calculation"
                android:maxWidth="100dp"
                android:layout_marginRight="7dp"
                />-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/primary_text"
                android:id="@+id/amount"
                android:textStyle="bold"
                android:ems="10"
                android:text=""
                android:inputType="numberDecimal"
                />
            </LinearLayout>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/add_detail"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end|bottom"
                app:srcCompat="@drawable/add"
                app:fabSize="mini"
                app:useCompatPadding="true"
                android:onClick="addMoreDetail"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>