<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tech.thrithvam.spoffice.HomeScreen"
    android:background="@drawable/primary_gradient"
    android:animateLayoutChanges="true"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="10dp"
        android:textSize="10sp"
        android:textColor="@color/secondary_text"
        android:id="@+id/welcome"/>
    <android.support.v7.widget.CardView
        android:layout_below="@id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:id="@+id/statistics_card"
        android:animateLayoutChanges="true"
        android:layout_above="@+id/buttons_card">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:padding="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enquiries"
                android:textColor="@color/primary_text"
                android:paddingLeft="5dp"
                android:textSize="14sp"
                android:typeface="monospace"
                android:id="@+id/card1_title"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:layout_toLeftOf="@+id/statistics_duration" />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/statistics_duration"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="7dp"
                android:paddingRight="5dp"
                android:layout_alignBottom="@+id/card1_title"/>

            <com.wang.avi.AVLoadingIndicatorView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:indicatorName="BallScaleMultipleIndicator"
                android:layout_gravity="center"
                app:indicatorColor="@color/colorAccent"
                android:id="@+id/loading_indicator"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="20dp"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:id="@+id/buttons_card"
        android:animateLayoutChanges="true"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:animateLayoutChanges="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="7dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:animateLayoutChanges="true">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="InvoicePurchaseClick">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/quotations"
                        android:scaleType="fitCenter"
                        android:tint="@color/colorAccent"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/purchase_icon"
                        android:layout_margin="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quotations"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/purchase_icon"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        />
                </RelativeLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="10dp"/>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="ExpenseClick">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/proforma"
                        android:scaleType="fitCenter"
                        android:tint="@color/colorAccent"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/expense_icon"
                        android:layout_margin="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/proforma_invoices"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/expense_icon"
                        android:gravity="center"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:maxLines="2"
                        android:ellipsize="end"
                        />
                </RelativeLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingBottom="7dp"
                android:layout_weight="1"
                android:gravity="center"
                android:animateLayoutChanges="true">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="SuppliersClick">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/customers"
                        android:scaleType="fitCenter"
                        android:tint="@color/colorAccent"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/supplier_icon"
                        android:layout_margin="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Customer Orders"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/supplier_icon"
                        android:gravity="center"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        />
                </RelativeLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:layout_marginBottom="10dp"/>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/suppliers"
                        android:scaleType="fitCenter"
                        android:tint="@color/colorAccent"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/extra_icon"
                        android:layout_margin="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Supplier Orders"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/extra_icon"
                        android:gravity="center"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    </RelativeLayout>